[package]
name = "cloutd"
version = "0.7.0"
authors = []
license = "MPL-2.0"

categories = ["network-programming"]
keywords = ["nhrp", "vpn"]

[dependencies]
tokio = "0.1"
tokio-codec = "0.1"
tokio-current-thread = "0.1"
tokio-reactor = "0.1"
bytes = "0.4"
byteorder = "1.2"
libc = "0.2"
mio = "0.6.15"
futures = "0.1"
pnet_sys = "0.21"
nom = "4.0"

rtnetlink = { path = "../netlink/rtnetlink", features = ["tokio_support"] }
netlink-socket = { path = "../netlink/netlink-socket", features = ["tokio_support"] }

slog = { version = "2.3", features = ["max_level_trace"] }
slog-term = "2.4"
slog-async = "2.3"
slog-scope = "4.0"

[profile.release]
opt-level = "s"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
