[package]
name = "cloutd"
version = "0.8.0"
authors = ["Nadja Reitzenstein <me@dequbed.space>", "Jakob Riepler <jakob.riepler@chaosfield.at>"]
license = "MPL-2.0"
edition = "2021"

categories = ["network-programming"]
keywords = ["nhrp", "vpn"]

[dependencies]
nix = { version = "0.24.1", features = ["socket", "uio"] }

nhrp = { path = "../nhrp" }

rtnetlink = "0.10.1"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros", "net"] }
bytes = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"

thiserror = "1.0"
miette = { version = "5.1", features = ["fancy"] }
